--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <style>
 body {
- background: url(LeechLife.png);
+ background: url(LeechLifecomingsoon.jpg);
     background-size: contain;
     background-position: top;
     background-repeat: no-repeat;
