--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </h1>
 
                     <p>
-                 Leech Life is a web show that features and is exclusive to live performances from budding and undeground musicians all around the world. We believe that today's media doens't do justice to the art of live music and we plan to change that. From lucky coincidences to improv, when an artist is in the zone and gets carried away doing their own thing, magical things happen. Musicians don't have the platform to do that anymore (unless they're topping charts and selling out arenas of course) This is a place for the ones on the come up and a place for people to discover them.
+                 Leech Life is a web show that features and is exclusive to live performances from budding and underground musicians all around the world. We believe that today's media doesn't do justice to the art of performance and we plan to change that. From lucky coincidences to improv, when an artist is in the zone and gets carried away doing their own thing, magical things happen. Musicians don't have the platform to do that anymore (unless they're topping charts and selling out arenas, of course). This is a place for the ones on the come up and a place for people to discover them.
 
                     </p>
 
@@ -64,7 +64,7 @@
                 </div>  <!-- end home-content__text -->
 
                 <div class="col-four home-content__counter">
-                    <h3>First Episode in</h3>
+                    <h3>Site Launches in</h3>
 
                     <div class="home-content__clock">
                         <div class="top">
