index static - index html
to make sure the hyper link works

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="home-content">
 
             <div class="home-logo">
-                <a href="index-static.html">
+                <a href="index.html">
                     <img src="images/logo.gif" alt="Homepage">
                 </a>
             </div>
