--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="home-content">
 
             <div class="home-logo">
-                <a href="www.leechlife.com">
+                <a href="index.html">
                     <img src="images/logo.gif" alt="Homepage">
                 </a>
             </div>
