--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                     <h1>
                     Revolutionizing <br>
-                    Live <br> Music.
+                    Live <br> Music..
                     </h1>
 
                     <p>
