--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
- <title> Leech Life</title>
+ <title> Leech Life </title>
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
@@ -52,7 +52,7 @@
 
                     <h1>
                     Revolutionizing <br>
-                    Live <br> Music..
+                    Live <br> Music.
                     </h1>
 
                     <p>
