--- a/index.html
+++ b/index.html
@@ -109,7 +109,12 @@
                             <span>Dribbble</span></a>
                         </li>
   
-            </ul> <!-- end home-social -->
+            </ul> <!-- end home-social --> 
+
+            <div class="row home-copyright">
+                
+                <span>Design by <a href="https://www.styleshout.com/">styleshout</a></span>
+            </div> <!-- end home-copyright -->
             <div class="home-content__line"></div>
 
         </div> <!-- end home-content -->
