--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
         </div>
         <div id="content">
-            <div id="video-container">
+        <p> click that button </p>    <div id="video-container">
                 <div id="play-video">
                     <button onClick="showVideo();">
                         <img src="playbutton.png" />
