--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </ul>
         </div>
         <div id="content">
-        <p> click that button </p>    <div id="video-container">
-                <div id="play-video">
+          <div id="video-container">
+    <p> click that button...</p>              <div id="play-video">
                     <button onClick="showVideo();">
                         <img src="playbutton.png" />
                     </button>
