--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div id="content">
           <div id="video-container">
-    <p> click that button...</p>              <div id="play-video">
+    <p> click that play button...</p>              <div id="play-video">
                     <button onClick="showVideo();">
                         <img src="playbutton.png" />
                     </button>
