--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div id="feature">
                 <h2>Get Featured</h2>
-                <p>Send your demo along with your social media links to <u>
+                <p>We are currently still in the development phase and are not accepting any demos. But once we launch you may send your demo along with your social media links to <u>
                     admin@leeechlife.com</u> to get a segment or maybe even a whole episode!</p>
             </div>
             
